bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: value or is not a member of Boolean
  if (!weekday or vacation) {
               ^